--- a/ly.html
+++ b/ly.html
@@ -18,7 +18,7 @@
                 <a href="member.html"><h5 style=" color:#7B328A;  ">Members</h5></a>
             </div>
             <div class="col s1 push-s4">
-                <a href="home.html" style="padding-left: 7em;"><img src="img/BTS1.png"></a>
+                <a href="index.html" style="padding-left: 7em;"><img src="img/BTS1.png"></a>
             </div>
             <div class="col s1 push-s5">
                 <a href="school.html"><h5 style=" color:#7B328A; padding-left: 1em;">Albums</h5></a>
