--- a/member.html
+++ b/member.html
@@ -12,7 +12,7 @@
 <body bgcolor="black">
     <div id="headers">
         <a href="member.html"><h5 style="display: inline; color:#7B328A; ">Members</h5></a>
-        <a href="home.html"><img src="img/BTS1.png"></a>
+        <a href="index.html"><img src="img/BTS1.png"></a>
         <a href="school.html"><h5 style="display: inline; color:#7B328A;">Albums</h5></a>
         
     </div>
