--- a/members.html
+++ b/members.html
@@ -13,7 +13,7 @@
 <div bgcolor="black">
     <div id="headers">
         <a href="members.html"><h5 style="display: inline; color:#7B328A; ">Members</h5></a>
-        <a href="home.html"><img src="BTS1.png"></a>
+        <a href="index.html"><img src="BTS1.png"></a>
         <a href="school.html"><h5 style="display: inline; color:#7B328A;">Albums</h5></a>
         
     </div>
