--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="box">
         <video controls autoplay muted>
             <source src="img/vid.mp4" type="video/mp4">
+            <track label="English" kind="subtitles" srclang="en" src="vid.vtt" default>
           </video>
     </div>
     </div>
