--- a/ly.html
+++ b/ly.html
@@ -14,13 +14,13 @@
 
     <div id="headers" style="display: inline;">
         <div class="row" style="background-color: #000000;">
-            <div class="col s1 push-s4">
+            <div class="col s1 push-s4 hide-on-med-and-down">
                 <a href="member.html"><h5 style=" color:#7B328A;  ">Members</h5></a>
             </div>
             <div class="col s1 push-s4">
                 <a href="index.html" style="padding-left: 7em;"><img src="img/BTS1.png"></a>
             </div>
-            <div class="col s1 push-s5">
+            <div class="col s1 push-s5 hide-on-med-and-down">
                 <a href="school.html"><h5 style=" color:#7B328A; padding-left: 1em;">Albums</h5></a>
             </div>
         </div>
