--- a/wings.html
+++ b/wings.html
@@ -17,7 +17,7 @@
             <div class="col s1 push-s4 hide-on-med-and-down">
                 <a href="member.html"><h5 style=" color:#7B328A;  ">Members</h5></a>
             </div>
-            <div class="col s1 push-s4">
+            <div class="col s1 push-s2 m1 push-m4">
                 <a href="index.html" style="padding-left: 7em;"><img src="img/BTS1.png"></a>
             </div>
             <div class="col s1 push-s5 hide-on-med-and-down">
