--- a/be.html
+++ b/be.html
@@ -44,6 +44,9 @@
       </div>
     
       <ul class="sidenav" id="menu">
+        <li><a href="member.html"><h2>MEMBERS</h2></a></li>
+        <li><a href="school.html"><h2>ALBUMS</h2></a></li>
+        <li class="divider"></li>
         <li><a href="school.html"><h2>SCHOOL ERA</h2></a></li>
         <li><a href="youth.html"><h2>YOUTH ERA</h2></a></li>
         <li><a href="wings.html"><h2>WINGS ERA</h2></a></li>
