change the whole member page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body bgcolor="#7B328A">
     <audio autoplay="true" src="img/vid.mp3"></audio>
     <div id="headers">
-        <a href="member.html"><h5 style="display: inline; color:#5AB23D; ">Members</h5></a>
+        <a href="nj.html"><h5 style="display: inline; color:#5AB23D; ">Members</h5></a>
         <a href="#box"><img src="img/BTS.png"></a>
         <a href="school.html"><h5 style="display: inline; color:#5AB23D;">Albums</h5></a>
         
@@ -89,7 +89,7 @@
                 <h3>ROLES: Leader, Main Rapper, Producer, Songwriter </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m10 l3 push-l10">
-                        <a href="member.html#nj">
+                        <a href="nj.html#nj">
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -119,7 +119,7 @@
                 <h3>ROLES: Visual, Sub Vocal, Madhyung (맏형) </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#jin" >
+                        <a href="j.html#jin" >
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -141,7 +141,7 @@
                 <h3>ROLES: Lead Rapper, Producer, Songwriter </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#s">
+                        <a href="sg.html#s">
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -165,7 +165,7 @@
                 <h3>ROLES: Main Dancer, Sub Rapper, Sub Vocalist, Producer, Songwriter, Sunshine </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#jh">
+                        <a href="jh.html#jh">
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -192,7 +192,7 @@
                 <h3>ROLES: Main Dancer, Lead Vocalist </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#jimin" onclick="document.location='member.html#jimin';" >
+                        <a href="jm.html#jm" onclick="document.location='member.html#jimin';" >
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -216,7 +216,7 @@
                 <h3>ROLES: Lead Dancer, Sub Vocalist, Visual </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#tae">
+                        <a href="v.html#v">
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
@@ -239,7 +239,7 @@
                 <h3>ROLES: Main Vocalist, Lead Dancer, Sub Rapper, Center, Maknae </h3>
                 <div class="row">
                     <div class="col s4 push-s8 m3 push-m9 l3 push-l10">
-                        <a href="member.html#jk">
+                        <a href="jk.html#jk">
                             <h3 style="color: #5AB23D;"><u>SEE MORE</u></h3>
                         </a>
                     </div>
