--- a/eng.html
+++ b/eng.html
@@ -15,7 +15,7 @@
     <div id="headers" style="display: inline;">
         <div class="row" style="background-color: #000000;">
             <div class="col s1 push-s4 hide-on-med-and-down">
-                <a href="member.html"><h5 style=" color:#7B328A;  ">Members</h5></a>
+                <a href="nj.html"><h5 style=" color:#7B328A;  ">Members</h5></a>
             </div>
             <div class="col s1 push-s2 m1 push-m4">
                 <a href="index.html" style="padding-left: 7em;"><img src="img/BTS1.png"></a>
@@ -37,7 +37,7 @@
             <li><a href="ly.html"><h2>LOVE YOURSELF ERA</h2></a></li>
             <li><a href="mots.html"><h2>MOTS ERA</h2></a></li>
             <li><a href="be.html"><h2>B.E. ERA</h2></a></li>
-            <li  class="active"><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
+            <li class="active"><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
           </ul>
         </div>
       </nav>
@@ -53,7 +53,7 @@
         <li><a href="ly.html"><h2>LOVE YOURSELF ERA</h2></a></li>
         <li><a href="mots.html"><h2>MOTS ERA</h2></a></li>
         <li><a href="be.html"><h2>B.E. ERA</h2></a></li>
-        <li><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
+        <li class="active"><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
       </ul>
 
         
