--- a/jm.html
+++ b/jm.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="css/members.css" />
-    <title>BTS | Albums</title>
+    <title>BTS | JIMIN</title>
 </head>
 <body bgcolor="#5AB23D">
 
