--- a/wings.html
+++ b/wings.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="css/album.css" />
-    <title>BTS | Albums</title>
+    <title>BTS | WINGS</title>
 </head>
 <body bgcolor="#5AB23D">
 
@@ -37,7 +37,7 @@
             <li><a href="ly.html"><h2>LOVE YOURSELF ERA</h2></a></li>
             <li><a href="mots.html"><h2>MOTS ERA</h2></a></li>
             <li><a href="be.html"><h2>B.E. ERA</h2></a></li>
-            <li><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
+            <li><a href="eng.html"><h2>ENGLISH SINGLES</h2></a></li>
           </ul>
         </div>
       </nav>
@@ -53,7 +53,7 @@
         <li><a href="ly.html"><h2>LOVE YOURSELF ERA</h2></a></li>
         <li><a href="mots.html"><h2>MOTS ERA</h2></a></li>
         <li><a href="be.html"><h2>B.E. ERA</h2></a></li>
-        <li><a href="eng.html"><h2>ENGLISH ERA</h2></a></li>
+        <li><a href="eng.html"><h2>ENGLISH SINGLES</h2></a></li>
       </ul>
 
       <audio id="wings">
