--- a/jk.html
+++ b/jk.html
@@ -49,7 +49,7 @@
         <li class="divider"></li>
         <li><a href="nj.html"><h2>RM</h2></a></li>
         <li><a href="j.html"><h2>JIN</h2></a></li>
-        <l><a href="sg.html"><h2>SUGA</h2></a></l>
+        <li><a href="sg.html"><h2>SUGA</h2></a></li>
         <li><a href="jh.html"><h2>J-HOPE</h2></a></li>
         <li ><a href="jm.html"><h2>JIMIN</h2></a></li>
         <li><a href="v.html"><h2>V</h2></a></li>
