--- a/ly.html
+++ b/ly.html
@@ -82,7 +82,7 @@
                         </div>
                         
                         <div class="card-reveal green lighten-4" style="opacity: 65%;">
-                            <span class="card-title grey-text text-darken-4">Love Yourself: 承 Her (2017)<i class= " right material-icons" onclick="pausely1Audio('ly1')">close</i></span>
+                            <span class="card-title grey-text text-darken-4">Love Yourself: 承 Her <i class= " right material-icons" onclick="pausely1Audio('ly1')">close</i>(2017)</span>
                             <p style="font-size: 20px;">BTS releases LOVE YOURSELF 承 'HER'!
                                 <br>
                                 “Loving yourself is the beginning of true love”,
@@ -105,7 +105,7 @@
                             <img src="alb/ly2.jpg" class="activator" onclick="playly2Audio('ly2')">
                         </div>
                         <div class="card-reveal " style="opacity: 65%;">
-                            <span class="card-title grey-text text-darken-4">Love Yourself:轉 Tear (2018)<i class="right material-icons " onclick="pausely2Audio('ly2')">close</i></span>
+                            <span class="card-title grey-text text-darken-4">Love Yourself:轉 Tear <i class="right material-icons " onclick="pausely2Audio('ly2')">close</i>(2018)</span>
                             <p style="font-size: 20px;">BTS releases third studio album LOVE YOURSELF 轉 ‘TEAR’
                                 <br>
                                 Fake love inevitably leads to loss and separation,
@@ -125,7 +125,7 @@
                             <img src="alb/ly3.jpg" class="activator" onclick="playly3Audio('ly3')">
                         </div>
                         <div class="card-reveal " style="opacity: 65%;">
-                            <span class="card-title grey-text text-darken-4">Love Yourself: 結 Answer (2018)<i class="right material-icons" onclick="pausely3Audio('ly3')">close</i></span>
+                            <span class="card-title grey-text text-darken-4">Love Yourself: 結 Answer <i class="right material-icons" onclick="pausely3Audio('ly3')">close</i>(2018)</span>
                             <p style="font-size: 20px;">BTS, LOVE YOURSELF 結 ‘ANSWER’
                                 <br>
                                 “Loving oneself is where true love begins”'
