--- a/ly.html
+++ b/ly.html
@@ -81,7 +81,7 @@
                             <img src="alb/ly1.jpg" class="activator" onclick="playly1Audio('ly1')">
                         </div>
                         
-                        <div class="card-reveal green lighten-4" style="opacity: 65%;">
+                        <div class="card-reveal" style="opacity: 65%;">
                             <span class="card-title grey-text text-darken-4">Love Yourself: 承 Her <i class= " right material-icons" onclick="pausely1Audio('ly1')">close</i>(2017)</span>
                             <p style="font-size: 20px;">BTS releases LOVE YOURSELF 承 'HER'!
                                 <br>
