--- a/school.html
+++ b/school.html
@@ -129,7 +129,7 @@
                       <p style="font-size: 20px;">With their previous two albums, 2 COOL 4 SKOOL and O!RUL8,2?, 
                         BTS sang about the dreams and happiness of teens. 
                         The songs spoke about young people living without a dream and schools that force rigid and 
-                        homogenous thought onto its students. The new album, released on February 12, 
+                        homogenous thought onto its students. The album 
                         continues to focus on school and teens. As hinted by the title, SKOOL LUV AFFAIR, 
                         the album’s main theme is the love that blossoms in the school. 
                         This album is a culmination of the “School Trilogy” project that discusses the topics of most 
