--- a/youth.html
+++ b/youth.html
@@ -84,7 +84,7 @@
                         <div class="card-reveal " style="opacity: 65%;">
                             <span class="card-title grey-text text-darken-4">화양연화 Pt. 1 (2015)<i class=" right material-icons " onclick="pausehyyh1Audio('nmd')">close</i></span>
                             <p style="font-size: 20px;">BTS has come back with their third mini album, 
-                                The most beautiful moment in life pt.1 or in Korean "Hwa Yang Yeon Hwa"
+                                The most beautiful moment in life pt.1 or in Korean "Hwa Yang Yeon Hwa" Part 1.
                                 <br>
                                 No longer just young boys, the album is an introduction to BTS as a group that continues 
                                 to grow and develop. In each track are distilled poetic and pop emotions that allows the 
@@ -115,7 +115,7 @@
                                 Now entering their young adulthood, the members of BTS sang in their previous album, 
                                 The most beautiful moment in life pt.1, about people their age being threatened by uncertainty. 
                                 Released seven months after that first installment, 
-                                The most beautiful moment in life pt.2 sings about the energy of youth barreling forward, 
+                                The most beautiful moment in life pt.2 or in Korean "Hwa Yang Yeon Hwa" Part 2, sings about the energy of youth barreling forward, 
                                 embracing even the uncertainty and insecurity. 
                                 Now beginning to taste the bitterness of grown-up life, 
                                 they can easily sense that life isn't always beautiful. 
@@ -144,8 +144,8 @@
                             <span class="card-title grey-text text-darken-4">화양연화: YOUNG FOREVER <i class="right material-icons" onclick="pauseyfAudio('yf')">close</i>(2016)</span>
                             <p style="font-size: 20px;">The final chapter of the story of The most beautiful moment in life
                                 <br><br>
-                                Having won over the world with their two-part The most beautiful moment in life series in 2015, 
-                                BTS will release their special album The most beautiful moment in life : YOUNG FOREVER on May 2. 
+                                Having won over the world with their two-part The most beautiful moment in life series, 
+                                BTS will release their special album The most beautiful moment in life : YOUNG FOREVER. 
                                 True to the title of the albums, 
                                 the series has enabled BTS to now be in the most beautiful moment of their lives. 
                                 The most beautiful moment in life : YOUNG FOREVER is a special album that marks the 
