--- a/wings.html
+++ b/wings.html
@@ -82,7 +82,7 @@
                             <p style="font-size: 20px;">BTS will release their second studio album, WINGS.
                               <br>
                               Having met their most beautiful moment in life through the ablum series of the same title, 
-                              BTS now stands before a new door. Set for release on October 10, 
+                              BTS now stands before a new door.  
                               WINGS contains songs about boys who encounter temptation for the first time and must 
                               ponder and agonize in the face of it. As the seven boys experience pain and bliss, 
                               they bring forth the image of birds that break out of their shells and try to take 
