--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body bgcolor="#7B328A">
     <audio id="bts">
-        <source src="img/bts.mp3" type="audio/mpeg">
+        <source src="img/btss.mp3" type="audio/mpeg">
       </audio>
 
-    <audio autoplay="true" src="img/bts.mp3"></audio>
+    <audio autoplay="true" src="img/btss.mp3"></audio>
     <div id="headers">
         <a href="nj.html"><h5 style="display: inline; color:#5AB23D; ">Members</h5></a>
         <a href="#box" onclick="playbtsAudio('bts')"><img src="img/BTS.png"></a>
