--- a/wings.html
+++ b/wings.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <link rel="stylesheet" type="text/css" href="css/album.css" />
+    <link rel="icon" href="img/BTS1.png">
     <title>BTS | WINGS</title>
 </head>
 <body bgcolor="#5AB23D">
