--- a/be.html
+++ b/be.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
+    <link rel="icon" href="img/BTS1.png">
     <link rel="stylesheet" type="text/css" href="css/album.css" />
     <title>BTS | B.E.</title>
 </head>
