--- a/member.html
+++ b/member.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="css/member.css" />
+    <link rel="icon" href="img/BTS1.png">
     <title>Document</title>
 </head>
 <body bgcolor="black">
