--- a/school.html
+++ b/school.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="css/album.css" />
+    <link rel="icon" href="img/BTS1.png">
     <title>BTS | SCHOOL</title>
 </head>
 <body bgcolor="#5AB23D">
